ignore autocapitalize, disable hover effect

--- a/www/index.html
+++ b/www/index.html
@@ -74,7 +74,7 @@ All rights reserved.
 
             <div data-role="content" class="ui-nodisc-icon center80 hidden">
                 <input id="alias" type="text" class="input" placeholder="alias"  autocomplete="off"
-                       data-clear-btn="true" spellcheck="false" data-corners="false"
+                       autocapitalize="off" data-clear-btn="true" spellcheck="false" data-corners="false"
                        data-bind="textInput: curAlias"/>
                 <input id="secret" type="password" class="input" placeholder="secret" autocomplete="off"
                        data-clear-btn="true" data-corners="false"
