add simple examples written in Golang and Bash

--- a/www/index.html
+++ b/www/index.html
@@ -230,6 +230,9 @@ All rights reserved.
 </code></pre>
                 <p>
                     On Linux replace <span style="font-family:courier;">shasum</span> by <span style="font-family:courier;">sha1sum</span>.
+                <p>
+                Source code and other simple examples written in Golang and Bash can be found on GitHub:<br>
+                github.com/pmorjan/pwcalc-mobile
                 <hr>
                 Version: <span data-bind="text: appVersion"></span>
                 <p>
